api-selfcare-pn-service-desk-v1.yaml update and refactoring method name
